--- a/css/main.css
+++ b/css/main.css
@@ -2,36 +2,39 @@
 body {
   margin: 0px;
   background-color: rgb(255, 255, 255);
-  font-family: 'Trade Gothic LT Std Regular';
+  font-family: 'TradeGothicLTStd';
+  color: #000;
+  margin-bottom: 70px;
 }
 
 h2, h3, h4, h5, h6 {
   color: rgb(81, 101, 103);
 }
 
-
 h2 {
   font-size: 48px;
   font-weight: 300;
-  font-family: 'Alte Hass Grotesk Bold';
+  font-family: 'AlteHaasGrotesk_Bold';
 }
 
 h3 {
-  font-size: 30px;
+  font-size: 25px;
   font-weight: 300;
-  font-family: 'Helvetica Regular';
+  font-family: 'AlteHaasGrotesk_Bold';
+  text-align: center;
+  text-transform: uppercase;
 }
 
 h4 {
   font-size: 22px;
   font-weight: 300;
-  font-family: 'Trade Gothic LT Std Bold';
+  font-family: 'TradeGothicLTStd';
 }
 
 h5 {
   font-size: 18px;
   font-weight: 300;
-  font-family: 'Trade Gothic LT Std Bold';
+  font-family: 'TradeGothicLTStd';
 }
 
 ul {
@@ -41,9 +44,34 @@ ul {
 
 a {
   color: rgb(142, 161, 161);
+  text-decoration: none;
+  cursor: pointer;
+  font-family: 'TradeGothicLTStd';
+}
+
+p {
+  text-align: justify;
+  font-family: 'TradeGothicLTStd';
+}
+
+.pure-g [class*=pure-u] {
+  font-family: 'TradeGothicLTStd';
+}
+
+@media (min-width: 768px) {
+  h3 {
+    font-size: 30px;
+  }
+}
+
+@media (max-width: 767.98px) {
+
 }
 
 /* ********************************* GLOBAL CLASS ********************************* */
+.text-small {
+  font-size: 12px;
+}
 
 .center {
   text-align: center;
@@ -54,7 +82,6 @@ a {
   height: 100%;
   margin: auto;
 }
-
 
 .verticalCenter > div {
   vertical-align: middle;
@@ -68,8 +95,8 @@ a {
 
 .bgimage {
  background-size: cover;
- background-position: 50%;
- min-height: 25vw;
+ background-position: 100% 43%;
+ min-height: 28vw;
  height: 40vh;
 }
 
@@ -85,6 +112,7 @@ ul.inline li {
   margin: 16px 8%;
   display: inline-block;
   position: relative;
+
 }
 
 .border:before {
@@ -107,17 +135,46 @@ ul.inline li {
   max-width: 100px;
 }
 
+[class*=pure-u] {
+  box-sizing: border-box;
+}
+
+.pure-button-primary {
+  background: rgb(81, 101, 103);
+}
+
+input[type=text],input[type=tel],input[type=email], textarea {
+  width: 100%;
+}
+
+@media (min-width: 768px) {
+  [class*=pure-u] {
+    padding: 0px 10px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  [class*=pure-u] {
+    padding: 10px 0px;
+  }
+}
 
 /* ********************************* LOGO ********************************* */
+#logo-placeholder {
+  padding: 10px;
+  padding-bottom: 0px;
+  box-sizing: border-box;
+  height: 30vh;
+}
 
 #logo-container {
+  padding: 10px;
+  padding-bottom: 0px;
   text-align: center;
   position: fixed;
   width: 100%;
   background-color: rgba(255, 255, 255, 0.9);
   z-index: 2;
-  padding: 10px;
-  padding-bottom: 0px;
   transition: all 0.2s ease-out;
 }
 
@@ -153,15 +210,11 @@ ul.inline li {
   background-color: transparent;
 }
 
-
-
-
 #menu, .menu-link {
   transition: all 0.2s ease-out;
 }
 
-@media (min-width: 1050px) {
-
+@media (min-width: 768px) {
   #menu {
     box-sizing: border-box;
     margin-left: 0px;
@@ -191,10 +244,7 @@ ul.inline li {
   }
 }
 
-
-
 /* ********************************* MENU MOBILE ********************************* */
-
 .menu-link {
   position: fixed;
   display: block;
@@ -233,7 +283,7 @@ ul.inline li {
   margin-top: 0.6em;
 }
 
-@media (min-width: 1050px) {
+@media (min-width: 768px) {
   .menu-link {
     position: fixed;
     left: 220px;
@@ -241,18 +291,16 @@ ul.inline li {
   }
 }
 
-@media (max-width: 1050px) {
+@media (max-width: 767.98px) {
   #menu {
     background-color: rgb(81, 101, 103);
+    transition: background-color 0.7s ease;
   }
 }
 
-
-
 /* ********************************* STRUCTURE ********************************* */
-
 #main {
-  padding-top: 75px;
+  padding-top: 14px;
 }
 
 #layout {
@@ -261,17 +309,18 @@ ul.inline li {
   padding-left: 0;
   padding-top: 30vh;
 }
-#layout.active #menu {
-  left: 220px;
-  width: 220px;
-  top: 0;
-}
 
-#layout.active .menu-link {
-  left: 220px;
-}
+@media (max-width: 767.98px) {
+  #layout.active #menu {
+    left: 220px;
+    width: 220px;
+    top: 0;
+  }
 
-@media (max-width: 1050px) {
+  #layout.active .menu-link {
+    left: 220px;
+  }
+
   #layout.active {
     position: relative;
     left: 220px;
@@ -282,19 +331,27 @@ ul.inline li {
   }
 }
 
+@media (min-width: 768px) {
+  #main {
+    padding-top: 75px;
+  }
+}
+
 .content-width {
-  margin: 0 auto;
-  padding: 0 2em;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 20px;
+  padding-right: 20px;
   max-width: 800px;
   line-height: 1.6em;
 }
 
 /* ********************************* HEADER ********************************* */
-
 #header {
-  padding: 20px;
+  padding: 0;
+  margin: 0;
   text-align: center;
-  background-image: url("../img/2s7a0765.jpg");
+  background-image: url("../img/2S7A0833-Modifier.jpg");
 }
 
 #header h2 {
@@ -304,11 +361,10 @@ ul.inline li {
   margin-top: 80px;
   background-color: rgba(255, 255, 255, 0.65);
   border:1px solid transparent;
-  //border-radius: 10px;
-  //box-shadow: 12px 12px 2px 1px rgba(81, 101, 103, 0.6);
+  display: none;
 }
 
-@media (max-width: 1050px) {
+@media (max-width: 767.98px) {
   #header h2 {
     padding: 4px;
     font-size: 34px;
@@ -316,134 +372,36 @@ ul.inline li {
 }
 
 /* ********************************* CONCEPT ********************************* */
+#concept h3 {
+  text-transform: uppercase;
+}
+
 /* ********************************* CHIFFRE ********************************* */
 
-#chiffres table {
-    margin: auto;
-    width: 100%;
-}
-
-#chiffres td {
-    min-width: 45px;
-    position: relative;
-    padding: 4px;
-}
-
-#chiffres td div, #chiffres td svg {
-    //padding: 4px;
-    width: 100%;
-    max-width: 20vh;
-}
-
-#chiffres tr:first-child td:first-child {
-  width: 40px;
-}
-
-#chiffres tr:first-child td:nth-child(3) {
-  width: 100px;
-}
-
-
-#chiffres .hauteur {
-border-bottom: 1px solid #000;
-    text-align: center;
-/*
-    padding-top: 55%;
-    min-width: 98px;
-    transform: rotate(-90deg);
-    position: absolute;
-    top: 0;
-    */
-}
-
-/*
-.hauteur:before {
-  content: '>';
-  position: absolute;
-  right: -6px;
-  top: -14px;
-  transform: rotate(-90deg);
-}
-
-.hauteur:after {
-  content: '>';
-  position: absolute;
-  right: -6px;
-  bottom: -14px;
-  transform: rotate(90deg);
-}
-*/
-
-.longueur {
-  border-top: 1px solid #000;
-  text-align: center;
-}
-
-
-.longueur:before {
-  content: '<';
-  position: absolute;
-  left: -5px;
-  top: -5px;
-}
-
-.longueur:after {
-  content: '>';
-  position: absolute;
-  right: -5px;
-  top: -5px;
-}
-
-
-.largeur {
-    border-top: 1px solid #000;
-    text-align: center;
-    transform: skew(8deg,-40deg);
-}
-
-/*
-.largeur:before {
-  content: '<';
-  position: absolute;
-  left: -5px;
-  top: -13px;
-}
-
-.largeur:after {
-  content: '>';
-  position: absolute;
-  right: -5px;
-  top: -13px;
-}
-*/
-
-.largeur span {
-    transform: skew(-8deg,40deg);
-    position: absolute;
-    //width: 100px;
-    bottom: -63px;
-}
-
 /* ********************************* EVENT ********************************* */
-
+#event-2 {
+  display: none;
+}
+/*
 .images-sliced {
   overflow: hidden;
   position: relative;
   width: 100%;
   height: 50vw;
 }
+
 .images-sliced > div, .images-sliced img {
   width: 100%;
   height: 100%;
 }
+
 .images-sliced > div {
   overflow: hidden;
   position: absolute;  
-  /* arctan(27 / 40) = 0,593749667rad = 34.01935deg 
-   * 90deg - 34.01935deg = 55.98065deg
-   */
-   //transform: skewX(-55.98deg);
-   transform: skewX(-63.44deg);
+  //arctan(27 / 40) = 0,593749667rad = 34.01935deg 
+  //90deg - 34.01935deg = 55.98065deg
+  //transform: skewX(-55.98deg);
+  transform: skewX(-63.44deg);
  }
  .images-sliced > div:first-child {
   left: -.25em;
@@ -480,6 +438,7 @@ border-bottom: 1px solid #000;
   transform: skewX(0deg);
   transition: all .3s ease;
 }
+*/
 
 /* ********************************* PRESTATION ********************************* */
 
@@ -506,13 +465,30 @@ border-bottom: 1px solid #000;
 /* ********************************* CUSTOM ********************************* */
 /* ********************************* PRODUIT ********************************* */
 /* ********************************* GALERIE ********************************* */
+#instagram {
+  position: relative;
+}
+
+#instagram img {
+  display: block;
+  width: 100%;
+}
+
+.wpinsta_masonry_white-panel {
+  position: absolute;
+}
+
 /* ********************************* AGENDA ********************************* */
 /* ********************************* CONTACT ********************************* */
 
 #contact svg {
-  height: 48px;
+  height: 30px;
   transform: rotate(180deg) scaleX(-1);
   margin: 20px;
+}
+
+#contact svg:hover path {
+  fill: rgb(142, 161, 161);
 }
 
 #contact ul {
@@ -520,15 +496,162 @@ border-bottom: 1px solid #000;
   margin: 0px;
 }
 
+.g-recaptcha {
+  text-align: center;
+}
+
+.g-recaptcha > div {
+  display: inline-block;
+}
+
+.submit-container {
+  padding-top: 10px;
+}
+
+.button-success {
+  background-color: #5eb95e;
+  color: #FFF;
+}
+
 footer {
-  background-image: url("../img/abstract-antique-backdrop-129731.jpg");
   background-position: 50% 100%;
   background-size: 100%;
   padding: 1px 10px;
-  text-shadow: 0px 1px 0px rgba(255,255,255,.3), 0px -1px 0px rgba(0,0,0,.7);
-  color: #222;
 }
 
-footer h3, footer a {
-  color: #222;
+.texte-obligatoire {
+  font-size: 10px;
+  text-align: center;
+}
+
+/* ********************************* MODAL ********************************* */
+
+.js [data-modal], .a11y-modal {
+  border: none;
+  overflow-x: hidden;
+}
+
+.js [data-modal] > div, .a11y-modal > div {
+  position: relative;
+  top: -38px;
+}
+
+.a11y-modal__heading {
+  padding-right: 20px;
+  text-align: center;
+}
+
+*, *:after, *:before {
+  box-sizing: unset;
+}
+.js [data-modal], .js [data-modal]:after, .js [data-modal]:before,
+.a11y-modal, .a11y-modal:after, .a11y-modal:before {
+  box-sizing: border-box;
+  max-height: 80vh;
+}
+
+#confidentialite {
+  max-width: 80vw;
+}
+
+/* ********************************* COOKIE ********************************* */
+
+html #tarteaucitronAlertSmall #tarteaucitronCookiesListContainer #tarteaucitronCookiesList .tarteaucitronHidden, 
+html #tarteaucitron #tarteaucitronServices .tarteaucitronHidden,
+html #tarteaucitron #tarteaucitronServices .tarteaucitronLine,
+html #tarteaucitron #tarteaucitronServices .tarteaucitronMainLine:hover,
+html #tarteaucitron #tarteaucitronServices .tarteaucitronLine:hover,
+html .tac_activate,
+html #tarteaucitronAlertSmall #tarteaucitronCookiesListContainer #tarteaucitronCookiesTitle {
+  background-color: #FFF;
+}
+
+html #tarteaucitron #tarteaucitronServices .tarteaucitronMainLine .tarteaucitronName b,
+html #tarteaucitron #tarteaucitronServices .tarteaucitronMainLine .tarteaucitronName a,
+html #tarteaucitron #tarteaucitronServices .tarteaucitronTitle a,
+html #tarteaucitronAlertSmall #tarteaucitronCookiesListContainer #tarteaucitronCookiesTitle b {
+  color: rgb(81, 101, 103);
+}
+
+html #tarteaucitronAlertBig,
+html #tarteaucitronAlertSmall #tarteaucitronCookiesListContainer #tarteaucitronCookiesList .tarteaucitronTitle,
+html #tarteaucitron #tarteaucitronServices .tarteaucitronTitle,
+html #tarteaucitron #tarteaucitronInfo,
+html #tarteaucitron #tarteaucitronServices .tarteaucitronDetails,
+html #tarteaucitronAlertSmall #tarteaucitronCookiesListContainer #tarteaucitronClosePanelCookie,
+html #tarteaucitron #tarteaucitronClosePanel,
+html #tarteaucitronAlertSmall {
+  background-color: rgb(81, 101, 103);
+}
+
+html #tarteaucitron #tarteaucitronServices .tarteaucitronMainLine,
+html #tarteaucitron #tarteaucitronServices .tarteaucitronLine.tarteaucitronMainLine.allow,
+html #tarteaucitron #tarteaucitronServices .tarteaucitronLine.tarteaucitronMainLine.deny,
+html #tarteaucitron .tarteaucitronBorder,
+html #tarteaucitronAlertSmall #tarteaucitronCookiesListContainer #tarteaucitronCookiesTitle,
+html #tarteaucitronAlertSmall #tarteaucitronCookiesListContainer #tarteaucitronCookiesList {
+  border: 2px solid rgb(81, 101, 103);
+}
+
+html #tarteaucitron #tarteaucitronServices .tarteaucitronMainLine,
+html #tarteaucitron #tarteaucitronServices .tarteaucitronLine.tarteaucitronMainLine.allow,
+html #tarteaucitron #tarteaucitronServices .tarteaucitronLine.tarteaucitronMainLine.deny,
+html #tarteaucitronAlertSmall #tarteaucitronCookiesListContainer #tarteaucitronCookiesTitle {
+  border-bottom: none;
+}
+
+html #tarteaucitron #tarteaucitronServices .tarteaucitronLine .tarteaucitronAsk .tarteaucitronAllow,
+html #tarteaucitron #tarteaucitronServices .tarteaucitronLine .tarteaucitronAsk .tarteaucitronDeny,
+html .tac_activate .tarteaucitronAllow {
+  border: 1px solid #ddd;
+  background-color: transparent;
+  color: #000;
+}
+
+html #tarteaucitron #tarteaucitronServices .tarteaucitronLine .tarteaucitronAsk .tarteaucitronAllow,
+html #tarteaucitron #tarteaucitronServices .tarteaucitronLine .tarteaucitronAsk .tarteaucitronDeny,
+html .tac_activate .tarteaucitronAllow {
+  border: 1px solid #ddd;
+  background-color: transparent;
+  color: #000;
+}
+
+html #tarteaucitron #tarteaucitronServices .tarteaucitronLine.allow {
+  border-left: 5px solid #5eb95e;
+}
+
+html #tarteaucitronAlertBig #tarteaucitronCloseAlert,
+html #tarteaucitronAlertBig #tarteaucitronPersonalize,
+html #tarteaucitron #tarteaucitronServices .tarteaucitronLine.allow .tarteaucitronAsk .tarteaucitronAllow,
+html #tarteaucitronAlertSmall #tarteaucitronManager #tarteaucitronDot #tarteaucitronDotGreen,
+html .tac_activate .tac_float .tarteaucitronAllow {
+  background-color: #5eb95e;
+  color: #FFF;
+}
+
+html #tarteaucitron #tarteaucitronServices .tarteaucitronLine.deny {
+  border-left: 5px solid #dd514c;
+}
+
+html #tarteaucitron #tarteaucitronServices .tarteaucitronLine.deny .tarteaucitronAsk .tarteaucitronDeny,
+html #tarteaucitronAlertSmall #tarteaucitronManager #tarteaucitronDot #tarteaucitronDotRed {
+  background-color: #dd514c;
+  color: #FFF;
+}
+
+html .tac_activate,
+html .tac_activate .tac_float b {
+  color: #000;
+}
+
+html .tac_activate .tac_float {
+  text-align: left;
+}
+
+html #tarteaucitronAlertSmall #tarteaucitronCookiesNumber,
+html #tarteaucitronAlertSmall #tarteaucitronCookiesNumber:hover,
+html #tarteaucitronAlertSmall #tarteaucitronManager:hover,
+html #tarteaucitronAlertSmall #tarteaucitronCookiesListContainer #tarteaucitronCookiesList .tarteaucitronCookiesListMain,
+html #tarteaucitronAlertSmall #tarteaucitronCookiesListContainer #tarteaucitronCookiesList .tarteaucitronCookiesListMain:hover {
+  background: transparent;
 }
