--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,25 @@
+
+@font-face {
+  font-family: 'TradeGothicLTStd';
+  src: url('../font/TradeGothicLTStd/TradeGothicLTStd.eot?#iefix') format('embedded-opentype'),
+  url('../font/TradeGothicLTStd/TradeGothicLTStd.otf')  format('opentype'),
+  url('../font/TradeGothicLTStd/TradeGothicLTStd.woff') format('woff'),
+  url('../font/TradeGothicLTStd/TradeGothicLTStd.ttf')  format('truetype'),
+  url('../font/TradeGothicLTStd/TradeGothicLTStd.svg#TradeGothicLTStd') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'AlteHaasGrotesk_Bold';
+  src: url('../font/AlteHaasGrotesk_Bold/AlteHaasGrotesk_Bold.eot?#iefix') format('embedded-opentype'),
+  url('../font/AlteHaasGrotesk_Bold/AlteHaasGrotesk_Bold.woff') format('woff'),
+  url('../font/AlteHaasGrotesk_Bold/AlteHaasGrotesk_Bold.ttf')  format('truetype'),
+  url('../font/AlteHaasGrotesk_Bold/AlteHaasGrotesk_Bold.svg#AlteHaasGrotesk_Bold') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
 /* ********************************* GLOBAL ********************************* */
 body {
   margin: 0px;
@@ -178,7 +200,7 @@ input[type=text],input[type=tel],input[type=email], textarea {
   transition: all 0.2s ease-out;
 }
 
-#logo {
+#logo-container img {
   height: 30vh;
   max-width: 80vw;
   transition: all .3s ease;
@@ -351,7 +373,37 @@ input[type=text],input[type=tel],input[type=email], textarea {
   padding: 0;
   margin: 0;
   text-align: center;
-  background-image: url("../img/2S7A0833-Modifier.jpg");
+}
+
+@media (max-width: 568.97px) {
+  #header {
+    background-image: url("../img/aperovan_xs.jpg");
+  }
+}
+@media (min-width:569px) and (max-width: 768.97px) {
+  #header {
+    background-image: url("../img/aperovan_sm.jpg");
+  }
+}
+@media (min-width:769px) and (max-width: 1024.97px) {
+  #header {
+    background-image: url("../img/aperovan_md.jpg");
+  }
+}
+@media (min-width:1025px) and (max-width: 1280.97px) {
+  #header {
+    background-image: url("../img/aperovan_xl.jpg");
+  }
+}
+@media (min-width:1281px) and (max-width: 1920.97px) {
+  #header {
+    background-image: url("../img/aperovan_xxl.jpg");
+  }
+}
+@media (min-width: 1921px) {
+  #header {
+    background-image: url("../img/aperovan.jpg");
+  }
 }
 
 #header h2 {
@@ -465,18 +517,31 @@ input[type=text],input[type=tel],input[type=email], textarea {
 /* ********************************* CUSTOM ********************************* */
 /* ********************************* PRODUIT ********************************* */
 /* ********************************* GALERIE ********************************* */
+
+/****** MASONRY ******/
+#galerie {
+  text-align: center;
+}
+
 #instagram {
-  position: relative;
+  display: inline-block;
 }
 
-#instagram img {
-  display: block;
-  width: 100%;
+#instagram > div {
+  padding:0px 4px;
 }
 
-.wpinsta_masonry_white-panel {
-  position: absolute;
+#instagram .grid-item {
+  padding-bottom: 50px;
 }
+
+@media (max-width: 400px) {
+  #instagram img {
+    width: 100%;
+  }
+}
+
+/****** FIN MASONRY ******/
 
 /* ********************************* AGENDA ********************************* */
 /* ********************************* CONTACT ********************************* */
@@ -522,6 +587,15 @@ footer {
 .texte-obligatoire {
   font-size: 10px;
   text-align: center;
+}
+
+#confirmation {
+  color: #5eb95e;
+}
+
+#confirmation.hidden-opacity {
+  opacity: 0;
+  transition: all 0.7s;
 }
 
 /* ********************************* MODAL ********************************* */
@@ -582,6 +656,11 @@ html #tarteaucitronAlertSmall #tarteaucitronCookiesListContainer #tarteaucitronC
 html #tarteaucitron #tarteaucitronClosePanel,
 html #tarteaucitronAlertSmall {
   background-color: rgb(81, 101, 103);
+}
+
+html #tarteaucitronAlertBig,
+html #tarteaucitronAlertSmall {
+  bottom: 0;
 }
 
 html #tarteaucitron #tarteaucitronServices .tarteaucitronMainLine,
